@@ -27,6 +27,7 @@
 
 #include "cong-document.h"
 #include "cong-editor-line-manager.h"
+#include "cong-editor-area-lines.h"
 
 G_BEGIN_DECLS
 
@@ -40,7 +41,7 @@ CONG_DECLARE_CLASS_END ()
 
 CongEditorLineManager*
 cong_editor_line_manager_simple_new (CongEditorWidget3 *widget,
-				     CongEditorArea *area_lines);
+				     CongEditorAreaLines *area_lines);
 
 G_END_DECLS
 
